--- a/css/button.css
+++ b/css/button.css
@@ -1,55 +1,54 @@
-	.button{
-		display: block;
-		position: relative;
-		top: 50%;
-		left: 35%
-	}
-	@media(max-width: 600px){
-		.button {
-			display: block;
-			position: relative;
-			left: 25%
+.button {
+  position: relative;
+  text-align: center;
+}
 
-		}
-	}
-	.button .top{
-		margin-left: 20px;
-	}
-	button{
-		margin-bottom: 50px;
-		background:#0090B7;
-		color:#fff;
-		border:none;
-		position:relative;
-		height:60px;
-		font-size:1.2em;
-		padding:0 2em;
-		cursor:pointer;
-		transition:800ms ease all;
-		outline:none;
-	}
-	button:hover{
-		background:#fff;
-		color:#0090B7;
-	}
-	button:before,button:after{
-		content:'';
-		position:absolute;
-		top:0;
-		right:0;
-		height:5px;
-		width:0;
-		background: #0090B7;
-		transition:400ms ease all;
-	}
-	button:after{
-		right:inherit;
-		top:inherit;
-		left:0;
-		bottom:0;
-	}
-	button:hover:before,button:hover:after{
-		width:100%;
-		transition:800ms ease all;
-		}
-	}
+.button .top {
+  margin-left: 20px;
+}
+
+button {
+  margin: 0 auto;
+  margin-bottom: 50px;
+  background: #0090b7;
+  color: #fff;
+  border: none;
+  margin: 0 auto;
+  position: relative;
+  height: 60px;
+  font-size: 1.2em;
+  padding: 0 2em;
+  cursor: pointer;
+  transition: 800ms ease all;
+  outline: none;
+}
+
+button:hover {
+  background: #fff;
+  color: #0090b7;
+}
+
+button:after,
+button:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 3px;
+  width: 0;
+  background: #0090b7;
+  transition: 400ms ease all;
+}
+
+button:after {
+  right: inherit;
+  top: inherit;
+  left: 0;
+  bottom: 0;
+}
+
+button:hover:after,
+button:hover:before {
+  width: 100%;
+  transition: 800ms ease all;
+}
