--- a/css/main.css
+++ b/css/main.css
@@ -1,33 +1,41 @@
-img{
-	width: 800px;
-	height: 500px;
-	display: block;
-	margin: 0 auto;
-	padding-bottom: 50px;
-}
-a{
-	text-decoration: none;
-}
-h1{
-	font-size: 2rem;
-	color: rgba(0,0,0,0.5);
-	text-align: center;
+a {
+  text-decoration: none;
 }
 
-#header{
-	padding-top: 130px;
-	padding-bottom: 50px;
+#main {
+  position: relative;
+  background-color: rgb(0, 0, 0);
 }
-#header, #main{
-	animation: fadeIn 2s;
-	
+.headerImg {
+  width: 100%;
+  height: 935px;
+  opacity: 0.5;
 }
 
-@keyframes fadeIn{
-	from{
-		opacity: 0;
-	}
-	to{
-		opacity: 1;
-	}
+#main p {
+  position: absolute;
+  font-family: 'Noto Sans', sans-serif;
+  top: 40%;
+  font-size: 40px;
+  color: white;
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: bold;
+}
+
+.button {
+  width: 100%;
+  position: absolute;
+
+  top: 60%;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
